--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,8 @@ platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    # Programming Language :: Python :: 3.6
-    # Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -19,7 +19,7 @@ packages =
     pyapp
 install_requires =
     requests>=2
-python_requires = >=3.8
+python_requires = >=3.5
 package_dir =
     =src
 zip_safe = no
